# trade-performance-auditor

./: .coverage  .gitignore  README.md  create_logs_file.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
sql/: schema.sql
src/: app.py  generate_data.py  pipeline.py  plots.py
src/trade_auditor/: app.py  config.py  database.py  exceptions.py  generate_data.py  pipeline.py  plots.py
src/trade_performance_auditor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_pipeline.py
