[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-performance-auditor"
version = "1.0.0"
description = "Quantitative multi-source algorithmic order execution audit pipeline"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "python-dotenv>=1.0.1",
    "pyarrow>=14.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-cov==4.1.0",
    "black==24.2.0",
    "isort==5.13.2"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=trade_auditor --cov-report=term-missing --cov-fail-under=90"
pythonpath = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]